# crewai_crew1

myenv/: pyvenv.cfg
qa_comply/: README.md  pyproject.toml
qa_comply/src/qa_comply/: crew.py  main.py
qa_comply/src/qa_comply/config/: agents.yaml  tasks.yaml
